# polaris-client

./: .gitignore  CMakeLists.txt  setup.bat
.github/workflows/: build.yml  debug-build.yml  nightly-build.yml
assets/lang/: ar_AR.json  cs_CZ.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  nl_NL.json  pt_BR.json  pt_PT.json  zh_CN.json  zh_TW.json
docs/: index.html
injector/: CMakeLists.txt  main.cpp
launcher/: Launcher.cpp
src/: CMakeLists.txt  Client.cpp  Client.h  dllmain.cpp
src/client/: Latite.cpp  Latite.h
src/client/feature/module/modules/game/: TextHotkey.h
src/client/feature/module/modules/misc/: DebugInfo.cpp
src/client/screen/screens/: ClickGUI.cpp
src/hooks/: DXHook.cpp  DXHook.h
src/modules/: Module.h  ModuleManager.h
src/modules/hud/: ArmorHUD.h  CPSCounter.h  ComboCounter.h  Coords.h  Crosshair.h  Keystrokes.h  PingDisplay.h  ReachDisplay.h  TabList.h
src/modules/util/: BetterTooltips.h  DropInventory.h  FastInventory.h  VSyncDisabler.h
src/modules/visual/: BlockOutline.h  Fullbright.h  Hitbox.h  LowFire.h  NoHurtCam.h  Zoom.h
src/sdk/: SDK.cpp  SDK.h
src/ui/: ClickGUI.h
src/util/: Util.cpp
